...
    "Add subtask" : {

    },
    "Add Subtask" : {

    },
    "Add task" : {

    },
    "Add task to %@" : {

    },
    "Add Time" : {
...
    "AI Quality" : {

    },
    "AI Quality: Correction and refinement rates" : {

    },
    "AI Settings" : {

    },
    "AI Settings%@" : {

    },
    "AI Suggest" : {
...
    "Calendar Sync" : {

    },
    "Calendar-First Todo App" : {

    },
    "Cancel" : {

    },
    "Cancel adding subtask" : {

    },
    "Carryover" : {
...
    "Marks task as done" : {

    },
    "Marks your highest priority task as complete" : {

    },
    "Me" : {

    },
    "Medium" : {

    },
    "Milestone reached!" : {
...
    "Title" : {

    },
    "To" : {

    },
    "Today" : {

    },
    "Today's Plan" : {

    },
    "Today's Priorities" : {
...
